--- a/tweaks/content/task.css
+++ b/tweaks/content/task.css
@@ -1,4 +1,3 @@
-const style = `
 .todo input,
 .doing input,
 .done input,
@@ -7,9 +6,9 @@ const style = `
 .later input {
   height: 1.1rem;
   width: 1.1rem;
-  border-radius: .2rem 0 0 .2rem;
-  margin: .15rem .5rem 0 0 !important;
-  font-size: .7rem;
+  border-radius: 0.2rem 0 0 0.2rem;
+  margin: 0.15rem 0.5rem 0 0 !important;
+  font-size: 0.7rem;
   opacity: 1;
 }
 .todo .block-marker,
@@ -22,14 +21,14 @@ const style = `
   color: var(--ls-secondary-text-color);
   opacity: 1;
   margin-left: -1.6rem;
-  margin-right: .4rem;
+  margin-right: 0.4rem;
   padding-left: 1.5rem;
-  padding-right: .4rem;
-  padding-top: .14rem;
-  padding-bottom: .16rem;
-  border-radius: .2rem;
+  padding-right: 0.4rem;
+  padding-top: 0.14rem;
+  padding-bottom: 0.16rem;
+  border-radius: 0.2rem;
   font-weight: 700;
-  font-size: .7rem;
+  font-size: 0.7rem;
   box-shadow: none;
 }
 .doing .block-marker,
@@ -38,15 +37,15 @@ const style = `
 }
 .doing .block-marker::before,
 .now .block-marker::before {
-  content: "◢";
+  content: '◢';
   font-size: 1.15rem;
   position: absolute;
-  left: -.05rem;
+  left: -0.05rem;
   top: 0rem;
   color: #fff5;
 }
 .done input {
-  border-radius: .15rem;
+  border-radius: 0.15rem;
 }
 .waiting .block-marker {
   opacity: 0.7;
@@ -57,8 +56,8 @@ const style = `
 .dark-theme .block-marker {
   border-color: #ffffff09;
 }
-.canceled, .cancelled, .done {
+.canceled,
+.cancelled,
+.done {
   opacity: 0.5;
 }
-`
-export default style
