--- a/tweaks/ui/filter_icon.css
+++ b/tweaks/ui/filter_icon.css
@@ -1,4 +1,3 @@
-const style = `
 a.filter.fade-link {
   color: var(--ls-link-text-color);
 }
@@ -10,7 +9,5 @@ a.filter.fade-link .text-green-400 {
   background-color: var(--ls-link-text-color);
   border-radius: 50%;
   padding: 0.2rem;
-  opacity: .8;
+  opacity: 0.8;
 }
-`
-export default style
