--- a/tweaks/ui/left_bear.css
+++ b/tweaks/ui/left_bear.css
@@ -1,11 +1,10 @@
-const style = `
 .left-sidebar-inner {
-	background-color: #2e3234;
-	border-right: 1px solid transparent;
+  background-color: #2e3234;
+  border-right: 1px solid transparent;
 }
 .dark-theme .left-sidebar-inner {
-	background-color: #2c2d2f;
-	border-right: 1px solid #0002;
+  background-color: #2c2d2f;
+  border-right: 1px solid #0002;
 }
 .left-sidebar-inner .dropdown-wrapper {
   background-color: #2e3234;
@@ -37,7 +36,7 @@ const style = `
   opacity: 1;
 }
 .left-sidebar-inner .new-page-link {
-	background-color: #2e3234;
+  background-color: #2e3234;
 }
 .left-sidebar-inner .new-page-link:hover,
 .left-sidebar-inner a.item:hover:is(footer *),
@@ -61,7 +60,7 @@ const style = `
 .left-sidebar-inner .nav-content-item .header:hover {
   background-color: transparent;
 }
-.left-sidebar-inner .nav-content-item .header .wrap-th>span {
+.left-sidebar-inner .nav-content-item .header .wrap-th > span {
   font-weight: 600;
   font-size: 0.7rem;
 }
@@ -83,14 +82,14 @@ const style = `
 }
 .left-sidebar-inner a.item:is(.ui__dropdown-trigger *) {
   background-color: transparent;
-  opacity: .8;
+  opacity: 0.8;
   padding-left: 0;
 }
 .font-medium:is(.left-sidebar-inner .ui__dropdown-trigger *) {
   font-weight: 600;
 }
 .text-sm:is(.left-sidebar-inner .ui__dropdown-trigger *) {
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 .left-sidebar-inner a.menu-link,
 .left-sidebar-inner a.item:hover:is(.ui__dropdown-trigger *) {
@@ -121,8 +120,12 @@ const style = `
   opacity: 1;
 }
 .dark-theme .left-sidebar-inner .nav-content-item .bd ul a:hover,
-.dark-theme .left-sidebar-inner a.item:hover:not(.ui__dropdown-trigger *, footer *),
-.dark-theme .left-sidebar-inner a.item:active:not(.ui__dropdown-trigger *, footer *),
+.dark-theme
+  .left-sidebar-inner
+  a.item:hover:not(.ui__dropdown-trigger *, footer *),
+.dark-theme
+  .left-sidebar-inner
+  a.item:active:not(.ui__dropdown-trigger *, footer *),
 .dark-theme .left-sidebar-inner a.item.active,
 .dark-theme #left-sidebar .nav-content-item ul .favorite-item a:hover,
 .dark-theme #left-sidebar .favorites ul .favorite-item a:hover {
@@ -136,5 +139,3 @@ const style = `
 .dark-theme .left-sidebar-inner .nav-content-item .bd ul a:hover .page-icon {
   color: #000;
 }
-`
-export default style
