--- a/tweaks/ui/pdf.css
+++ b/tweaks/ui/pdf.css
@@ -1,8 +1,7 @@
-const style = `
 #pdf-layout-container .extensions__pdf-toolbar,
-#pdf-layout-container[data-theme=light] .extensions__pdf-toolbar,
-#pdf-layout-container[data-theme=warm] .extensions__pdf-toolbar,
-#pdf-layout-container[data-theme=dark] .extensions__pdf-toolbar {
+#pdf-layout-container[data-theme='light'] .extensions__pdf-toolbar,
+#pdf-layout-container[data-theme='warm'] .extensions__pdf-toolbar,
+#pdf-layout-container[data-theme='dark'] .extensions__pdf-toolbar {
   background: transparent;
   background-image: none;
   top: calc(var(--ls-scrollbar-width) + 0.7rem);
@@ -13,26 +12,26 @@ const style = `
   font-weight: 400;
 }
 #pdf-layout-container .extensions__pdf-toolbar .buttons,
-#pdf-layout-container[data-theme=light] .extensions__pdf-toolbar .buttons {
+#pdf-layout-container[data-theme='light'] .extensions__pdf-toolbar .buttons {
   flex-direction: column-reverse;
   align-items: center;
   border-radius: 4px;
-  background-color: rgb(249,249,249); /* #00000006 */
+  background-color: rgb(249, 249, 249); /* #00000006 */
   padding: 5px 0;
   color: black;
 }
-#pdf-layout-container[data-theme=warm] .extensions__pdf-toolbar .buttons {
-  background-color: rgb(252,247,238); /* #ffffff6a */
+#pdf-layout-container[data-theme='warm'] .extensions__pdf-toolbar .buttons {
+  background-color: rgb(252, 247, 238); /* #ffffff6a */
   color: #50270a;
 }
-#pdf-layout-container[data-theme=dark] .extensions__pdf-toolbar .buttons {
-  background-color: rgb(25,61,72); /* #cccccc16 */
-  color: white
+#pdf-layout-container[data-theme='dark'] .extensions__pdf-toolbar .buttons {
+  background-color: rgb(25, 61, 72); /* #cccccc16 */
+  color: white;
 }
 #pdf-layout-container .extensions__pdf-toolbar a.button svg {
   color: unset;
 }
-#pdf-layout-container .extensions__pdf-toolbar>.inner>.r a.button {
+#pdf-layout-container .extensions__pdf-toolbar > .inner > .r a.button {
   margin: 0;
   font-size: 0.8rem;
   font-weight: 700;
@@ -44,18 +43,18 @@ const style = `
   color: black;
   padding: 2px 6px;
 }
-#pdf-layout-container .extensions__pdf-toolbar .buttons>a.button:last-child {
+#pdf-layout-container .extensions__pdf-toolbar .buttons > a.button:last-child {
   padding: 0;
   height: 1.8em;
 }
-#pdf-layout-container .extensions__pdf-toolbar .buttons>div a.button {
+#pdf-layout-container .extensions__pdf-toolbar .buttons > div a.button {
   height: 1.8rem;
   padding: 0;
 }
-#pdf-layout-container[data-theme=dark] .extensions__pdf-toolbar a.button {
+#pdf-layout-container[data-theme='dark'] .extensions__pdf-toolbar a.button {
   color: white;
 }
-#pdf-layout-container[data-theme=warm] .extensions__pdf-toolbar a.button {
+#pdf-layout-container[data-theme='warm'] .extensions__pdf-toolbar a.button {
   color: #50270a;
 }
 #pdf-layout-container .extensions__pdf-toolbar a.button:hover {
@@ -67,7 +66,9 @@ const style = `
   background-color: #0001;
   opacity: 1;
 }
-#pdf-layout-container[data-theme=dark] .extensions__pdf-toolbar a.button.is-active {
+#pdf-layout-container[data-theme='dark']
+  .extensions__pdf-toolbar
+  a.button.is-active {
   background-color: #fff2;
 }
 #pdf-layout-container .extensions__pdf-toolbar .buttons > .pager {
@@ -76,10 +77,10 @@ const style = `
 #pdf-layout-container .extensions__pdf-toolbar .ml-1 {
   margin: 0;
 }
-#pdf-layout-container .extensions__pdf-toolbar>.inner .pager>.nu {
+#pdf-layout-container .extensions__pdf-toolbar > .inner .pager > .nu {
   padding: 4px 2px;
 }
-#pdf-layout-container .extensions__pdf-toolbar>.inner .pager>.nu input {
+#pdf-layout-container .extensions__pdf-toolbar > .inner .pager > .nu input {
   width: 1.5em;
   font-size: small;
   line-height: 1em;
@@ -89,11 +90,21 @@ const style = `
   background-color: #0001;
   color: black;
 }
-#pdf-layout-container[data-theme=warm] .extensions__pdf-toolbar>.inner .pager>.nu input {
+#pdf-layout-container[data-theme='warm']
+  .extensions__pdf-toolbar
+  > .inner
+  .pager
+  > .nu
+  input {
   color: #50270a;
   background-color: #0001;
 }
-#pdf-layout-container[data-theme=dark] .extensions__pdf-toolbar>.inner .pager>.nu input {
+#pdf-layout-container[data-theme='dark']
+  .extensions__pdf-toolbar
+  > .inner
+  .pager
+  > .nu
+  input {
   color: white;
   background-color: #fff2;
 }
@@ -111,5 +122,3 @@ const style = `
 #pdf-layout-container .extensions__pdf-settings {
   color: #000d;
 }
-`
-export default style
