--- a/tweaks/ui/scroll.css
+++ b/tweaks/ui/scroll.css
@@ -3,8 +3,15 @@
 html[data-theme='light'],
 .dark-theme,
 html[data-theme='dark'] {
-  --ls-scrollbar-background-color: transparent;
+  --ls-scrollbar-foreground-color: var(--ls-secondary-border-color);
+  --ls-scrollbar-background-color: var(--ls-primary-background-color);
+  --ls-scrollbar-width: 14px;
 }
-::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   border-radius: var(--ls-scrollbar-width);
+  border: 4px solid var(--ls-primary-background-color);
+}
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--ls-border-color);
+  border-width: 3px;
 }
